Allow to build with Java 24